<resources>
    <string name="app_name">Lockout</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <string name="dont_have_account">Register</string>
    <string name="email">email</string>
    <string name="Login">username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
</resources>
